--- a/gui_adjuntar.ui
+++ b/gui_adjuntar.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>448</width>
-    <height>464</height>
+    <width>540</width>
+    <height>598</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,8 +29,8 @@
   <widget class="QPushButton" name="pushButton_seleccionar_archivos">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>160</y>
+     <x>30</x>
+     <y>170</y>
      <width>121</width>
      <height>61</height>
     </rect>
@@ -52,7 +52,7 @@
     <string>Ejegir carpeta destino</string>
    </property>
   </widget>
-  <widget class="QListWidget" name="listWidget_archivos_seleccionados">
+  <widget class="FileDropListWidget" name="listWidget_archivos_seleccionados">
    <property name="geometry">
     <rect>
      <x>160</x>
@@ -60,6 +60,9 @@
      <width>261</width>
      <height>192</height>
     </rect>
+   </property>
+   <property name="acceptDrops">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_cargar_pdf_base">
@@ -137,7 +140,31 @@
     <string>Incrustar cualquier archivo en PDF Base</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_clear1">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>260</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>img/trash1.png</normaloff>img/trash1.png</iconset>
+   </property>
+  </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>FileDropListWidget</class>
+   <extends>QListWidget</extends>
+   <header>cesel_attachpdf_3</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
