--- a/gui_adjuntar.ui
+++ b/gui_adjuntar.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>540</width>
-    <height>598</height>
+    <width>463</width>
+    <height>428</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>50</y>
-     <width>121</width>
-     <height>31</height>
+     <y>30</y>
+     <width>151</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
@@ -29,10 +29,10 @@
   <widget class="QPushButton" name="pushButton_seleccionar_archivos">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>170</y>
-     <width>121</width>
-     <height>61</height>
+     <x>20</x>
+     <y>70</y>
+     <width>151</width>
+     <height>151</height>
     </rect>
    </property>
    <property name="text">
@@ -43,9 +43,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>320</y>
-     <width>121</width>
-     <height>31</height>
+     <y>250</y>
+     <width>151</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
@@ -55,10 +55,10 @@
   <widget class="FileDropListWidget" name="listWidget_archivos_seleccionados">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>100</y>
+     <x>170</x>
+     <y>70</y>
      <width>261</width>
-     <height>192</height>
+     <height>181</height>
     </rect>
    </property>
    <property name="acceptDrops">
@@ -68,51 +68,51 @@
   <widget class="QLineEdit" name="lineEdit_cargar_pdf_base">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>50</y>
+     <x>170</x>
+     <y>30</y>
      <width>261</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_carpeta_destino_elegida">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>320</y>
+     <x>170</x>
+     <y>250</y>
      <width>261</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_ejecutar_programa">
+  <widget class="QPushButton" name="pushButton_incrustar">
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>370</y>
-     <width>121</width>
-     <height>61</height>
+     <y>290</y>
+     <width>201</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
-    <string>Ejecutar</string>
+    <string>Incrustar</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_indicar_trabajo_terminado">
+  <widget class="QLineEdit" name="lineEdit_indicar_incrustado_ok">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>390</y>
-     <width>91</width>
-     <height>31</height>
+     <x>370</x>
+     <y>290</y>
+     <width>61</width>
+     <height>51</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>380</y>
+     <x>40</x>
+     <y>320</y>
      <width>101</width>
      <height>51</height>
     </rect>
@@ -127,34 +127,44 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>10</y>
-     <width>361</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Incrustar cualquier archivo en PDF Base</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pushButton_clear1">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>260</y>
-     <width>41</width>
+     <x>20</x>
+     <y>220</y>
+     <width>151</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>Limpiar</string>
    </property>
    <property name="icon">
     <iconset>
      <normaloff>img/trash1.png</normaloff>img/trash1.png</iconset>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_eliminar_incrustados">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>340</y>
+     <width>201</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Eliminar incrustados</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_indicar_desincrustado_ok">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>340</y>
+     <width>61</width>
+     <height>51</height>
+    </rect>
    </property>
   </widget>
  </widget>
